compiler/tools/fpp-check/test/port_instance/undef_command_reg.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_command_reg.fpp:3.3
  command reg port cmdRegOut
  ^
error: symbol Fw is not defined
note: looking for a port here
